update operator categories