@@ -12,8 +12,9 @@ fi
 chmod 755 $NEST_HOME/jre/bin/*
 
 $NEST_HOME/jre/bin/java \
-    -server -Xmx4096M -XX:CompileThreshold=100 -Xverify:none \
-    -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -Xconcurrentio \
+	-server -Xms512M -Xmx3000M -XX:PermSize=512m -XX:MaxPermSize=512m -Xverify:none ^
+    -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -Xconcurrentio -XX:CompileThreshold=10000 ^
+    -XX:+UseParallelGC -XX:+UseNUMA -XX:-UseLoopPredicate -XX:+UseStringCache -XX:+UseCompressedStrings ^
     -Dceres.context=nest \
     "-Dnest.mainClass=org.esa.beam.framework.gpf.main.Main" \
     "-Dnest.home=$NEST_HOME" \
