@@ -8,8 +8,9 @@ IF [%NEST_HOME:~-1%]==[/] set NEST_HOME=%NEST_HOME:~0,-1%
 IF [%NEST_HOME:~-1%]==[\] set NEST_HOME=%NEST_HOME:~0,-1%
 
 "%NEST_HOME%\jre\bin\java.exe" ^
-    -server -Xmx850M -XX:CompileThreshold=100 -Xverify:none ^
-    -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -Xconcurrentio ^
+    -server -Xms850M -Xmx850M -XX:PermSize=512m -XX:MaxPermSize=512m -Xverify:none ^
+    -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -Xconcurrentio -XX:CompileThreshold=10000 ^
+    -XX:+UseParallelGC -XX:+UseNUMA -XX:-UseLoopPredicate -XX:+UseStringCache -XX:+UseCompressedStrings ^
     -Dceres.context=nest ^
     -Dnest.debug=false ^
     -Dnest.consoleLog=true ^
